# System-Monitor

./: .gitgnore  CMakeLists.txt  README.md
include/: display.h  linuxParser.h  process.h  processor.h  system.h
src/: display.cpp  linuxParser.cpp  main.cpp  my_program  process.cpp  processor.cpp  system.cpp
